Revert "fix scroll spacing on left column"
This reverts commit e6158dce3ddbdf8b97e927cee54ad9cf14c8e2d1.

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -784,7 +784,6 @@ ul.left-nav-menu li.selected svg {
 
 .db-status-bar {
   padding-top: 25px;
-  min-height: 110px;
 }
 
 .aboutModal {
